--- a/src/components/Pages/LoginPage/LoginPage.scss
+++ b/src/components/Pages/LoginPage/LoginPage.scss
@@ -4,6 +4,7 @@
 	justify-content: center;
 	align-items: center;
 	width: 100vw;
+	background-color: var(--white-1);
 
 	.login-form-wrapper {
 		display: flex;
