--- a/src/components/Pages/RegisterPage/RegisterPage.scss
+++ b/src/components/Pages/RegisterPage/RegisterPage.scss
@@ -4,6 +4,7 @@
 	justify-content: center;
 	align-items: center;
 	width: 100vw;
+	background-color: var(--white-1);
 
 	.register-form-wrapper {
 		display: flex;
